unpackaged/post_comexi/objects/Order/fields/COMEXI_Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Amount__c</fullName>
    <description>Importe del anticipo calculado sobre el total del pedido. Es la cifra que hay que ver cobrada antes de que arranque ingenieria.</description>
    <formula>IF(ISBLANK(COMEXI_Down_Payment_Pct__c), 0, TotalAmount * COMEXI_Down_Payment_Pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Importe del anticipo (calculado).</inlineHelpText>
    <label>Anticipo (importe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>