unpackaged/post_comexi/objects/Order/fields/COMEXI_Down_Payment_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Pct__c</fullName>
    <description>Porcentaje de anticipo pactado. Junto con el importe del pedido calcula el importe que ingenieria espera para arrancar.</description>
    <inlineHelpText>Porcentaje de anticipo pactado.</inlineHelpText>
    <label>Anticipo %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>