unpackaged/post_comexi/objects/Order/fields/COMEXI_Down_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Status__c</fullName>
    <description>Estado del cobro del anticipo. Hoy en COMEXI esto vive en correos; aqui es un dato del pedido y el plan de fulfillment lo hace cumplir.</description>
    <inlineHelpText>Estado del cobro del anticipo.</inlineHelpText>
    <label>Estado del anticipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Exencion autorizada</fullName>
                <label>Exención autorizada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>