unpackaged/post_comexi/objects/Order/fields/COMEXI_Expenses_Owner__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Expenses_Owner__c</fullName>
    <description>Quien asume los desplazamientos y la estancia del personal tecnico.</description>
    <inlineHelpText>Quien asume desplazamientos y estancia.</inlineHelpText>
    <label>Gastos a cargo de</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comexi</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Compartido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>