unpackaged/post_comexi/objects/Order/fields/COMEXI_Generated_By_Advisor__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Generated_By_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca los pedidos que nacen de la cadena del Retrofit Advisor. Es el filtro que usa la automatizacion para no tocar pedidos de otros flujos.</description>
    <inlineHelpText>Pedido nacido de la cadena del Retrofit Advisor.</inlineHelpText>
    <label>Generado por el Advisor</label>
    <type>Checkbox</type>
</CustomField>