unpackaged/post_comexi/objects/Order/fields/COMEXI_Intervention_Country__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Country__c</fullName>
    <description>Pais de la planta de intervencion. Determina desplazamientos y riesgo pais.</description>
    <inlineHelpText>Pais de la planta de intervencion.</inlineHelpText>
    <label>Pais de intervencion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>