unpackaged/post_comexi/objects/Order/fields/COMEXI_Intervention_Hours__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Hours__c</fullName>
    <description>Horas totales comprometidas, suma de montaje mecanico, instalacion electrica y puesta en marcha. Es la carga que operaciones tiene que reservar.</description>
    <inlineHelpText>Horas totales comprometidas.</inlineHelpText>
    <label>Horas de intervencion</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>