unpackaged/post_comexi/objects/Order/fields/COMEXI_Intervention_Site__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Site__c</fullName>
    <description>Planta del cliente donde se ejecuta la intervencion. Operaciones planifica sobre este dato, no sobre la direccion de facturacion.</description>
    <inlineHelpText>Planta donde se ejecuta la intervencion.</inlineHelpText>
    <label>Planta de intervencion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>