unpackaged/post_comexi/objects/Order/fields/COMEXI_Intervention_Weeks__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Weeks__c</fullName>
    <description>Semanas comprometidas de plazo. Es el compromiso que operaciones tiene que encajar en su ventana.</description>
    <inlineHelpText>Semanas de plazo comprometidas.</inlineHelpText>
    <label>Plazo (semanas)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>