unpackaged/post_comexi/objects/Order/fields/COMEXI_Obsolete_Component__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Obsolete_Component__c</fullName>
    <description>Componente que motiva el retrofit. Viaja desde la oportunidad, que es el unico sitio donde el advisor lo dejo escrito.</description>
    <inlineHelpText>Componente que motiva la intervencion.</inlineHelpText>
    <label>Componente obsoleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>