unpackaged/post_comexi/objects/Order/fields/COMEXI_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Payment_Terms__c</fullName>
    <description>Condiciones de pago heredadas del contrato, para que operaciones y finanzas lean lo mismo.</description>
    <inlineHelpText>Condiciones de pago del contrato.</inlineHelpText>
    <label>Condiciones de pago</label>
    <length>40</length>
    <type>Text</type>
</CustomField>