unpackaged/post_comexi/objects/Order/fields/COMEXI_Retrofit_SKU__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_SKU__c</fullName>
    <description>Referencia de catalogo del retrofit contratado, para cruzar el pedido con el catalogo sin abrir las lineas.</description>
    <inlineHelpText>Referencia del retrofit contratado.</inlineHelpText>
    <label>SKU del retrofit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>