unpackaged/post_comexi/objects/Order/fields/COMEXI_Retrofit_Type__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_Type__c</fullName>
    <description>Tipologia del retrofit segun las etiquetas de COMEXI. Hereda el valor del contrato.</description>
    <inlineHelpText>Naturaleza del retrofit pedido.</inlineHelpText>
    <label>Tipo de retrofit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTEC</fullName>
                <label>CTEC - Cambio tecnologico</label>
            </value>
            <value>
                <fullName>RET_OBS</fullName>
                <label>RET_OBS - Obsolescencia</label>
            </value>
            <value>
                <fullName>RET_NEW_FEATURES</fullName>
                <label>RET_NEW_FEATURES - Nuevas funciones</label>
            </value>
            <value>
                <fullName>RET_NEW_DESIGNS</fullName>
                <label>RET_NEW_DESIGNS - Nuevos disenos</label>
            </value>
            <value>
                <fullName>RET_MAINT</fullName>
                <label>RET_MAINT - Mantenimiento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>