unpackaged/post_comexi/objects/Order/fields/COMEXI_SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_SAP_Customer_Code__c</fullName>
    <description>Codigo del cliente en SAP, traido de la cuenta. Es el dato que acompana al material cuando el pedido cruza a SAP.</description>
    <formula>IF(ISBLANK(Account.COMEXI_SAP_Customer_Code__c), &apos;&apos;, Account.COMEXI_SAP_Customer_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Codigo del cliente en SAP (calculado).</inlineHelpText>
    <label>Codigo SAP del cliente</label>
    <type>Text</type>
</CustomField>