unpackaged/post_comexi/objects/Order/fields/COMEXI_Source_Case__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso de servicio que origino la cadena caso - oportunidad - oferta - contrato - pedido. Sin el, el pedido que llega a operaciones no dice de que averia venia.</description>
    <inlineHelpText>Caso desde el que nacio este pedido.</inlineHelpText>
    <label>Caso de origen</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pedidos de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>