unpackaged/post_comexi/objects/Order/fields/COMEXI_Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad de retrofit de la que sale el pedido. Order trae QuoteId y ContractId estandar pero no la oportunidad.</description>
    <inlineHelpText>Oportunidad de retrofit asociada.</inlineHelpText>
    <label>Oportunidad de origen</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pedidos de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>