unpackaged/post_comexi/objects/Order/fields/COMEXI_Target_Asset__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maquina sobre la que se interviene. Es el dato que operaciones necesita para planificar y el que la escena 12 actualiza al cerrar la instalacion.</description>
    <inlineHelpText>Maquina sobre la que se interviene.</inlineHelpText>
    <label>Maquina objetivo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Pedidos de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>