unpackaged/post_comexi/objects/Order/fields/COMEXI_Target_Intervention_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Intervention_Date__c</fullName>
    <description>Fecha objetivo de la intervencion acordada con el cliente.</description>
    <inlineHelpText>Fecha objetivo acordada.</inlineHelpText>
    <label>Fecha objetivo de intervencion</label>
    <type>Date</type>
</CustomField>